some fixes to center all the CSS thingies

--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -61,9 +61,10 @@
 </head>
 
 <body>
-    <div class="product-grid" id="product-grid">
-        <!-- Products will be displayed here dynamically trough the javascrypt -->
-    </div>
+    <h1>These are our products!</h1>
+        <div class="product-grid" id="product-grid">
+            <!-- Products will be displayed here dynamically trough the javascrypt -->
+        </div>
 
     <script>
         // Test array of product data
@@ -132,5 +133,45 @@
         // Call the function when the page loads
         window.onload = showAllProducts;
     </script>
+
+    <!-- Footer -->
+    <div class="footer"> 
+        <div class="row">
+        <div class="column">
+            <h3>About us</h3>
+            <p> At Fit 'n Flavors, we believe that nutrition forms the foundation for an energetic and balanced life. 
+                Our company has emerged from a shared passion for health, fitness, and delicious eating.
+                <br> 
+                <br> 
+                At Fit 'n Flavors, we strive to deliver high-quality, protein-rich products that are not only nutritious but also delightfully tasty. 
+                We understand that each individual has unique goals and taste preferences, which is why we have developed a wide range of products to meet all your needs.
+                <br> <br>
+                We aim to inspire you to bring out the best in yourself, both in the gym and beyond. Whether you're a seasoned athlete or just starting your fitness journey, Fit 'n Flavors is here to support you every step of the way.
+                Thank you for being a part of the Fit 'n Flavors family. Together, we are building a flavorful and healthy future!
+                </p>
+        </div>
+        <div class="column">
+            <br> <br>
+            <h3>Follow us!</h3>
+            <p><a href="http://www.instagram.com/" ><i class="fa fa-instagram" style="font-size:24px"></i></a>
+                <a href="https://www.facebook.com" ><i class="fa fa-facebook" style="font-size:24px"></i></a>
+                <a href="https://www.linkedin.com" ><i class="fa fa-linkedin" style="font-size:24px"></i></a>
+            
+            </p>
+            <br> <br>
+            <h3>Costumerservice</h3>
+            <p class="links">
+                <a href="FAQ/FAQ.html">FAQ</a>
+                <br>
+                <a href="Delivery.html">Delivery information</a>
+                <br>
+                <a href="Returns.html">Returns and refund policy</a>
+                <br>
+                <a href="contact.html">Contact</a>
+            </p>
+        </div>
+        </div>
+    
+    </div>
 </body>
 </html>
