Trachten de submit functie van de registratieform op te lossen

--- a/Login_folder/registratiescherm.html
+++ b/Login_folder/registratiescherm.html
@@ -14,7 +14,7 @@
     </head>
     <body>
                     <hr>
-                        <form action="add_user2.php" method="post"\>
+                        <form action="add_user2.php" method="post" id°`regForm`\>
                             <h1> REGISTER </h1>
                             <div class="login-box">
 
