--- a/Products_folder/product-details.html
+++ b/Products_folder/product-details.html
@@ -16,12 +16,59 @@
     <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
     <li><a href="../FAQ/FAQ.html">FAQ</a></li>
     </ul>
+    <style>
+        .product-container {
+            display: flex;
+            margin: 20px;
+            align-items: center;
+            max-width: 100%;
+        }
+
+        .left-column {
+            width: 50%;
+            padding: 10px;
+        }
+
+        .product-container img {
+            max-width: 80%;
+            max-height: 30%;
+            margin: 20px;
+            margin-left: 50px;
+            border: 2px solid black;
+            border-radius: 25px;
+            padding: 20px;
+        }
+
+        .product-container h2 {
+            font-size: 150%;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            color:black;
+        }
+
+        .product-container p {
+            color:black
+        }
+
+        .product-container .right-column {
+            width: 50%;
+            padding: 10px;
+            margin: 50px;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="product-container">
+    <div id="product-container" class="product-container">
         <!-- Product details will be displayed here dynamically with the javascrypt-->
-    </div>
+        <div class="left-column">
+            <img src="/Products_folder/Image_folder/Blueberry_Yogurt_Drink.jpg" alt="Product Picture">
+        </div>
+        <div class="right-column">
+            <h2>${data.ProductName}</h2>
+            <p>${data.ProductDescription}</p>
+            <p>Price: ${data.ProductPrice}</p>
+        </div>
+    </div>  
 
     <script>
         // Function to fetch and display product details based on the product ID from the URL
