--- a/Products_folder/product-details.html
+++ b/Products_folder/product-details.html
@@ -39,17 +39,17 @@
             padding: 20px;
         }
 
-        .product-container h2 {
+        h2 {
             font-size: 150%;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             color:black;
         }
 
-        .product-container p {
+        p {
             color:black
         }
 
-        .product-container .right-column {
+        .right-column {
             width: 50%;
             padding: 10px;
             margin: 50px;
