--- a/Login_folder/registratiescherm.html
+++ b/Login_folder/registratiescherm.html
@@ -114,7 +114,7 @@ function nextPrev(n) {
   // if you have reached the end of the form...
   if (currentTab >= x.length) {
     // ... the form gets submitted:
-    document.getElementById("regForm").submit();
+    document.getElementById("nextBtn").click(); 
     return false;
   }
   // Otherwise, display the correct tab:
