--- a/Products_folder/product-details.html
+++ b/Products_folder/product-details.html
@@ -20,6 +20,7 @@
         .product-container {
             display: flex;
             margin: 20px;
+            align-items: center;
             max-width: 100%;
         }
 
