Shopping Cart link aan Navbar toevoegen

--- a/Products_folder/product-details.html
+++ b/Products_folder/product-details.html
@@ -15,6 +15,7 @@
     <li><a href="../Login_folder/Login_screen.html">Login</a></li>
     <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
     <li><a href="../FAQ/FAQ.html">FAQ</a></li>
+    <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
     </ul>
     <style>
         .product-container {
