--- a/FAQ/FAQ.html
+++ b/FAQ/FAQ.html
@@ -49,7 +49,7 @@
             If you want to cancel your order, please call us within 10 minutes of purchasing, so we can do this for you. <br>
             Once the cancellation is successful, we will refund your money within 5 working days so you can place a new order! <br>
             <br>
-            If you did not manage to cancel your order within 10 minutes, don’t worry! <br>
+            If you did not manage to cancel your order within 10 minutes, do not worry! <br>
             You can still refuse the parcel upon delivery. The courier will take the parcel back to our warehouse.
             </div>
 
@@ -108,7 +108,7 @@
 
             <button class="accordion">What happens if I am not at home to accept my delivery?</button>
             <div class="panel">
-            Don't worry, if your order cannot fit through the letterbox or requires a signature then you should receive a calling card.<br>
+            Don not worry, if your order cannot fit through the letterbox or requires a signature then you should receive a calling card.<br>
             This card is from the courier and lets you know where your parcel is and how you can collect it.
             </div>
 
