few FAQ changes

--- a/FAQ/FAQ.html
+++ b/FAQ/FAQ.html
@@ -20,7 +20,8 @@
 
     <body>
         <h1> Frequently Asked Questions </h1>
-            <p>Cannot find the answer to your question below? Please get in contact with our <a href="Contact.html" title="Contact">Customer Service</a> team and they will be happy to help. </p>
+            <p>Cannot find the answer to your question below? Please get in contact with our 
+            <a href="Contact.html" title="Contact" class="contact-button"> Customer Service</a> team and they will be happy to help. </p>
 
         <h3>Ordering</h3>
             <button class="accordion">The item I want to order is out of stock. Why is it on the website?</button>
