Linkjes in footer gefixt

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@ function showSlides(n) {
         <br> <br>
         <h3>Costumerservice</h3>
         <p class="links">
-          <a href="FAQ/FAQ.html">FAQ</a>
+          <a href="../FAQ/FAQ.html">FAQ</a>
           <br>
-          <a href="Delivery.html">Delivery information</a>
+          <a href="../Delivery.html">Delivery information</a>
           <br>
-          <a href="Returns.html">Returns and refund policy</a>
+          <a href="../Returns.html">Returns and refund policy</a>
           <br>
-          <a href="contact.html">Contact</a>
+          <a href="../contact.html">Contact</a>
         </p>
     </div>
   </div>
