Footer link updates

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@ function showSlides(n) {
         <p class="links">
           <a href="../FAQ/FAQ.html">FAQ</a>
           <br>
-          <a href="../Delivery.html">Delivery information</a>
+          <a href="../FAQ/Delivery.html">Delivery information</a>
           <br>
-          <a href="../Returns.html">Returns and refund policy</a>
+          <a href="../FAQ/Returns.html">Returns and refund policy</a>
           <br>
-          <a href="../contact.html">Contact</a>
+          <a href="../FAQ/Contact.html">Contact</a>
         </p>
     </div>
   </div>
