--- a/FAQ/FAQ.html
+++ b/FAQ/FAQ.html
@@ -5,15 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Link naar de CSS sheet -->
-        <link rel="stylesheet" href="FAQ.css">
+        <link rel="stylesheet" href="/FAQ/FAQ.css">
         <title> FAQ </title>
 
         <!-- Navigatie bar -->
         <ul class = navbar_list>
-                <li class="navbar_item" ><a href="index.html">Home</a></li>
-                <li class="navbar_item" ><a href="Products_folder/main_products_page.html">Products</a></li>
-                <li class="navbar_item" ><a href="Login_folder/Login_screen.html">Login</a></li>
-                <li class="navbar_item" ><a href="Login_folder/registratiescherm.html">Registration</a></li>
+                <li class="navbar_item" ><a href="../index.html">Home</a></li>
+                <li class="navbar_item" ><a href="../Products_folder/main_products_page.html">Products</a></li>
+                <li class="navbar_item" ><a href="../Login_folder/Login_screen.html">Login</a></li>
+                <li class="navbar_item" ><a href="../Login_folder/registratiescherm.html">Registration</a></li>
         </ul>
 
     </head>
