--- a/Login_folder/registratiescherm.html
+++ b/Login_folder/registratiescherm.html
@@ -10,12 +10,11 @@
         <li><a href="../Login_folder/Login_screen.html">Login</a></li>
         <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
         <li><a href="../FAQ/FAQ.html">FAQ</a></li>
-        <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
       </ul>
     </head>
     <body>
       <hr>
-          <form action="add_user2.php" method="post" id="registrationForm">
+          <form action="add_user.php" method="post" id="registrationForm">
             <h1> REGISTER </h1>
             <div class="login-box">
 
@@ -86,6 +85,7 @@
                 </div>  
             </div>  
         </form>
+        <!-- Link naar de terms and services -->
     </body>
 </html>
 
