Added a navbar with a navbar function in js

--- a/FAQ/Contact.html
+++ b/FAQ/Contact.html
@@ -2,18 +2,13 @@
 <html lang="en">
 <head>
     <title> Contact </title>
-        <!-- Navigatie bar -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="Login_stylesheet.css">
-        <link rel="javascript" href="login_scherm.js">
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../Products_folder/main_products_page.html">Products</a></li>
-            <li><a href="../Login_folder/Login_screen.html">Login</a></li>
-            <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
-            <li><a href="../FAQ/FAQ.html">FAQ</a></li>
-            <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
-        </ul>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- Link naar de CSS sheet -->
+    <link rel="stylesheet" href="../Homepage_stylesheet.css">
+
+    <!-- Navigatie bar -->
+    <script src="Navbar.js" defer></script>
 </head>
 
 <body>
@@ -34,5 +29,6 @@
     1098 XH<br> 
     Amsterdam<br>
     </p>
+
 </body>
 </html>
