--- a/FAQ/Delivery.html
+++ b/FAQ/Delivery.html
@@ -3,16 +3,12 @@
 <head>
     <title> Delivery information </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/Homepage_stylesheet.css">
+        
+    <!-- Link naar de CSS sheet -->
+    <!-- <link rel="stylesheet" href="../Homepage_stylesheet.css"> -->
+    
     <!-- Navigatie bar -->
-    <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Products_folder/main_products_page.html">Products</a></li>
-        <li><a href="../Login_folder/Login_screen.html">Login</a></li>
-        <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
-        <li><a href="../FAQ/FAQ.html">FAQ</a></li>
-        <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
-    </ul>
+    <script src="Navbar.js" defer></script>
 </head>
 
 <body>
@@ -26,7 +22,6 @@
     <br>
     In case of a return,  the shipping costs are €4,95 and will be deducted from the amount of your refund.
     </p>
-
 
 </body>
 </html>
