--- a/FAQ/FAQ.html
+++ b/FAQ/FAQ.html
@@ -6,16 +6,12 @@
         
         <!-- Link naar de CSS sheet -->
         <link rel="stylesheet" href="/FAQ/FAQ.css">
-        <title> FAQ </title>
+
+        <!-- Link naar de CSS sheet
+        <link rel="stylesheet" href="../Homepage_stylesheet.css"> -->
 
         <!-- Navigatie bar -->
-        <ul class = navbar_list>
-                <li class="navbar_item" ><a href="../index.html">Home</a></li>
-                <li class="navbar_item" ><a href="../Products_folder/main_products_page.html">Products</a></li>
-                <li class="navbar_item" ><a href="../Login_folder/Login_screen.html">Login</a></li>
-                <li class="navbar_item" ><a href="../Login_folder/registratiescherm.html">Registration</a></li>
-        </ul>
-
+        <script src="Navbar.js" defer></script>
     </head>
 
     <body>
@@ -160,8 +156,7 @@
             You will receive a confirmation via email, after which your money will be refunded via the payment method you used within 3-5 working days.
             </p>
             </div>
-
-
+            
         <script>
             var acc = document.getElementsByClassName("accordion");
             var i;
