--- a/FAQ/Returns.html
+++ b/FAQ/Returns.html
@@ -3,20 +3,13 @@
 <head>
     <title>Returns and refunds</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/Homepage_stylesheet.css">
+    <!-- <link rel="stylesheet" href="/Homepage_stylesheet.css"> -->
     <!-- Navigatie bar -->
-    <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Products_folder/main_products_page.html">Products</a></li>
-        <li><a href="../Login_folder/Login_screen.html">Login</a></li>
-        <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
-        <li><a href="../FAQ/FAQ.html">FAQ</a></li>
-        <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
-    </ul>
+    <script src="Navbar.js" defer></script>
 </head>
 
 <body>
-    <h1>Returns and refund policy</h1>
+    <h1>Returns and Refund policy</h1>
     <h2>Return policy</h2>
     <p>You have 14 days from the date of receiving your item to start a return. We accept returns for all orders, provided they meet the following criteria:
         <ul>
