--- a/Login_folder/registratiescherm.html
+++ b/Login_folder/registratiescherm.html
@@ -3,15 +3,11 @@
     <head>
         <link rel="stylesheet" href="Login_stylesheet.css">
         <link rel="javascript" href="login_scherm.js">
-      <!-- Navigatie bar -->
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Products_folder/main_products_page.html">Products</a></li>
-        <li><a href="../Login_folder/Login_screen.html">Login</a></li>
-        <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
-        <li><a href="../FAQ/FAQ.html">FAQ</a></li>
-      </ul>
+      
+        <!-- Navigatie bar -->
+        <script src="../FAQ/Navbar.js" defer></script>
     </head>
+
     <body>
       <hr>
           <form action="add_user.php" method="post" id="registrationForm">
@@ -86,6 +82,7 @@
             </div>  
         </form>
         <!-- Link naar de terms and services -->
+        
     </body>
 </html>
 
