--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
     <title> Homepage </title>
       
     <!-- Navigatie bar -->
-    <ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../Products_folder/main_products_page.html">Products</a></li>
-      <li><a href="../Login_folder/Login_screen.html">Login</a></li>
-      <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
-      <li><a href="../FAQ/FAQ.html">FAQ</a></li>
-      <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
-    </ul>
+    <script src="../FAQ/Navbar.js" defer></script>
 
   </head>
 
@@ -132,5 +125,4 @@ function showSlides(n) {
 </div>
 
 </body>
-
 </html>
