--- a/Login_folder/Login_screen.html
+++ b/Login_folder/Login_screen.html
@@ -4,15 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Login_stylesheet.css">
     <link rel="javascript" href="login_scherm.js">
+    
     <!-- Navigatie bar -->
-    <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Products_folder/main_products_page.html">Products</a></li>
-        <li><a href="../Login_folder/Login_screen.html">Login</a></li>
-        <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
-        <li><a href="../FAQ/FAQ.html">FAQ</a></li>
-        <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
-    </ul>
+    <script src="../FAQ/Navbar.js" defer></script>
 </head>
 
 <body>
@@ -29,7 +23,7 @@
 
         <button type="button" class="registerbtn" onclick="submitForm()"> Login </button>
     </form>
-    
+
     <script>
         function submitForm() {
             var username = document.getElementById('username').value;
@@ -55,3 +49,5 @@
             });
         }
     </script>
+</body>
+</html>
