--- a/Shoppingcart_folder/shoppingcart_page.html
+++ b/Shoppingcart_folder/shoppingcart_page.html
@@ -7,14 +7,17 @@
   <title> Shoppingcart Page </title>
   
   <!-- Navigatie bar -->
-  <ul>
+  <script src="../FAQ/Navbar.js" defer></script>
+  
+  <!-- Navigatie bar -->
+  <!-- <ul>
     <li><a href="../index.html">Home</a></li>
     <li><a href="../Products_folder/main_products_page.html">Products</a></li>
     <li><a href="../Login_folder/Login_screen.html">Login</a></li>
     <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
     <li><a href="../FAQ/FAQ.html">FAQ</a></li>
     <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
-  </ul>
+  </ul> -->
 
 </head>
 
