verandering submit button

--- a/Login_folder/registratiescherm.html
+++ b/Login_folder/registratiescherm.html
@@ -68,7 +68,7 @@
 
                     <div style="float:right">
                       <button type="button" onclick="prevStep(3)">Previous</button>
-                      <button type="button" onclick="validateAndNext(3, ['username', 'password', 'password_2'], ['text', 'password', 'password'])" name="submit">Submit</button>
+                      <button type="submit" onclick="validateAndNext(3, ['username', 'password', 'password_2'], ['text', 'password', 'password'])" name="submit">Submit</button>
                     </div>
                 </div>
                 
