--- a/FAQ/Contact.html
+++ b/FAQ/Contact.html
@@ -9,26 +9,56 @@
 
     <!-- Navigatie bar -->
     <script src="Navbar.js" defer></script>
+
+    <style>        
+        h1 {
+        text-align: left;
+        margin-left: 5%;
+        margin-top: 5%;
+        color: black;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 300%;
+        align-self:stretch;
+        }
+        
+        h2 {
+        text-align: left;
+        margin-left: 5%;
+        margin-top: 2.5%;
+        color: black;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 150%;
+        align-self:stretch;
+        }
+        
+        p{
+        margin-left: 5%;
+        margin-top: 1%;
+        color: black;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 100%;
+        align-self:stretch;
+        }
+    </style>        
+
 </head>
 
 <body>
     <h1>Contact</h1><br>
 
-    <h3>Opening hours Customer Service:</h3>
-    <p>Monday - Friday: 9 a.m. - 5 p.m.</p><br>
+    <h2>Opening hours Customer Service:</h2>
+    <p>Monday - Friday: 9 a.m. - 5 p.m.</p>
 
-    <h3>Email:</h3>
-    <p>customerservice@fitflavors.nl</p><br>
+    <h2>Email:</h2>
+    <p>customerservice@fitflavors.nl</p>
 
-    <h3>Phone:</h3>
-    <p>NL: +316 12 34 56 78</p><br>
+    <h2>Phone:</h2>
+    <p>NL: +316 12 34 56 78</p>
 
-    <h3>Address:</h3>
-    <p>
-    Science Park 904<br>
-    1098 XH<br> 
-    Amsterdam<br>
-    </p>
+    <h2>Address:</h2>
+    <p>Science Park 904</p>
+    <p>1098 XH</p> 
+    <p>Amsterdam</p>
 
 </body>
 </html>
