--- a/Login_folder/Login_screen.html
+++ b/Login_folder/Login_screen.html
@@ -13,7 +13,7 @@
     <!-- Invoer van de inloggegevens -->
     <hr>
 
-    <form class="login-box" id="loginForm">
+    <form class="login-box" id="loginForm" action="" method="post" >
         <h1><b>LOGIN</b></h1>
         <!-- Filling in Username and Password -->
         <label class="login-text" for="username"><b>Username</b></label> <br>
