--- a/Login_folder/Login_screen.html
+++ b/Login_folder/Login_screen.html
@@ -21,7 +21,7 @@
         <label class="login-text" for="password"><b>Password</b></label> <br>
         <input type="password" name="password" id="password" autofocus placeholder="Enter password"required/> <br>
 
-        <button type="submit" class="registerbtn" onclick="submitForm()"> Login </button>
+        <button type="submit" name="submit" class="registerbtn" onclick="submitForm()"> Login </button>
     </form>
 
     <script>
