Fixed a small error

--- a/FAQ/Delivery.html
+++ b/FAQ/Delivery.html
@@ -95,7 +95,7 @@
                 <br> <br>
                 <h3>Costumerservice</h3>
                 <p class="links">
-                    <a href="FAQ/FAQ.html">FAQ</a>
+                    <a href="FAQ.html">FAQ</a>
                     <br>
                     <a href="Delivery.html">Delivery information</a>
                     <br>
