--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -8,8 +8,15 @@
     <!-- Link naar de CSS sheet -->
     <link rel="stylesheet" href="/Homepage_stylesheet.css">
 
-    <!-- Navigatie bar -->
-    <script src="../FAQ/Navbar.js" defer></script>
+        <!-- Navigatie bar -->
+    <ul>
+    <li style="float:left"><a class="active" href="../index.html">Home</a></li>
+    <li><a href="../Products_folder/main_products_page.html">Products</a></li>
+    <li><a href="../Login_folder/Login_screen.html">Login</a></li>
+    <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
+    <li><a href="../FAQ/FAQ.html">FAQ</a></li>
+    <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
+    </ul>
 
     <style>
         /* Simple styling for the product grid */
@@ -61,6 +68,16 @@
         </div>
 
     <script>
+        // Test array of product data
+        // const products = [
+        //     { ProductName: 'Yoghurt', ProductPrice: 19.99, ProductImage: '/Products_folder/Image_folder/Blueberry_Yogurt_Drink.jpg', ProductID: 1},
+        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
+        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
+        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
+        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
+        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2}
+        // ];
+
         // Function to fetch and display all products on the main page
         function showAllProducts() {
 
@@ -157,6 +174,5 @@
         </div>
     
     </div>
-
 </body>
 </html>
