--- a/index.html
+++ b/index.html
@@ -87,27 +87,22 @@ function showSlides(n) {
 <div class="footer"> 
   <div class="row">
     <div class="column">
-        <h3>About us</h3>
-        <p> At Fit 'n Flavors, we believe that nutrition forms the foundation for an energetic and balanced life. 
-          Our company has emerged from a shared passion for health, fitness, and delicious eating.
-          <br> 
-          <br> 
-          At Fit 'n Flavors, we strive to deliver high-quality, protein-rich products that are not only nutritious but also delightfully tasty. 
-          We understand that each individual has unique goals and taste preferences, which is why we have developed a wide range of products to meet all your needs.
-          <br> <br>
-          We aim to inspire you to bring out the best in yourself, both in the gym and beyond. Whether you're a seasoned athlete or just starting your fitness journey, Fit 'n Flavors is here to support you every step of the way.
-          Thank you for being a part of the Fit 'n Flavors family. Together, we are building a flavorful and healthy future!
+        <h3>About Fit 'n Flavors</h3>
+        <p> <a href="../About_us_folder/About_us.html">About us</a><br>
+          <a href="../About_us_folder/Terms_and_conditions.html">Terms & Conditions</a>
+
           </p>
     </div>
+
     <div class="column">
       <br> <br>
         <h3>Follow us!</h3>
         <p><a href="http://www.instagram.com/" ><i class="fa fa-instagram" style="font-size:24px"></i></a>
           <a href="https://www.facebook.com" ><i class="fa fa-facebook" style="font-size:24px"></i></a>
           <a href="https://www.linkedin.com" ><i class="fa fa-linkedin" style="font-size:24px"></i></a>
-        
         </p>
         <br> <br>
+
         <h3>Costumerservice</h3>
         <p class="links">
           <a href="../FAQ/FAQ.html">FAQ</a>
