--- a/index.html
+++ b/index.html
@@ -87,35 +87,27 @@ function showSlides(n) {
 <div class="footer"> 
   <div class="row">
     <div class="column">
-        <h3>About Fit 'n Flavors</h3>
-        <p> <a href="../About_us_folder/About_us.html">About us</a><br>
-          <a href="../About_us_folder/Terms_and_conditions.html">Terms & Conditions</a>
-
-          </p>
+        <h3 class="footer">About Fit 'n Flavors</h3>
+        <p class="footer"> <a href="../About_us_folder/About_us.html">About us</a></p>
+        <p class="footer"> <a href="../About_us_folder/Terms_and_conditions.html">Terms & Conditions</a></p>
     </div>
 
     <div class="column">
-      <br> <br>
-        <h3>Follow us!</h3>
-        <p><a href="http://www.instagram.com/" ><i class="fa fa-instagram" style="font-size:24px"></i></a>
-          <a href="https://www.facebook.com" ><i class="fa fa-facebook" style="font-size:24px"></i></a>
-          <a href="https://www.linkedin.com" ><i class="fa fa-linkedin" style="font-size:24px"></i></a>
-        </p>
-        <br> <br>
-
-        <h3>Costumerservice</h3>
-        <p class="links">
-          <a href="../FAQ/FAQ.html">FAQ</a>
-          <br>
-          <a href="../FAQ/Delivery.html">Delivery information</a>
-          <br>
-          <a href="../FAQ/Returns.html">Returns and refund policy</a>
-          <br>
-          <a href="../FAQ/Contact.html">Contact</a>
+      <h3 class="footer">Costumerservice</h3>
+      <p class="footer"><a href="../FAQ/FAQ.html">FAQ</a></p>
+      <p class="footer"><a href="../FAQ/Delivery.html">Delivery information</a></p>
+      <p class="footer"><a href="../FAQ/Returns.html">Returns and refund policy</a></p>
+      <p class="footer"><a href="../FAQ/Contact.html">Contact</a></p>
+    </div>
+    
+    <div class="column">
+        <h3 class="footer">Follow us!</h3>
+        <p class="footer"><a class="footer" href="http://www.instagram.com/" ><i class="fa fa-instagram" style="font-size:24px"></i></a>
+          <a class="footer" href="https://www.facebook.com" ><i class="fa fa-facebook" style="font-size:24px"></i></a>
+          <a class="footer" href="https://www.linkedin.com" ><i class="fa fa-linkedin" style="font-size:24px"></i></a>
         </p>
     </div>
   </div>
-
 </div>
 
 </body>
