--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -8,15 +8,8 @@
     <!-- Link naar de CSS sheet -->
     <link rel="stylesheet" href="/Homepage_stylesheet.css">
 
-        <!-- Navigatie bar -->
-    <ul>
-    <li style="float:left"><a class="active" href="../index.html">Home</a></li>
-    <li><a href="../Products_folder/main_products_page.html">Products</a></li>
-    <li><a href="../Login_folder/Login_screen.html">Login</a></li>
-    <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
-    <li><a href="../FAQ/FAQ.html">FAQ</a></li>
-    <li><a href="../Shoppingcart_folder/shoppingcart_page.html">Shopping Cart</a></li>
-    </ul>
+    <!-- Navigatie bar -->
+    <script src="../FAQ/Navbar.js" defer></script>
 
     <style>
         /* Simple styling for the product grid */
