--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
     <script>
-        window.location.href = '/path/to/login.php';
+        window.location.href = '../login.php';
     </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="/path/to/login.php">click here</a>.</p>
+    <p>If you are not redirected, <a href="../login.php'">click here</a>.</p>
 </body>
 </html>
