--- a/Shoppingcart_folder/shoppingcart_page.html
+++ b/Shoppingcart_folder/shoppingcart_page.html
@@ -33,6 +33,8 @@
         { OrderID: 1, ProductID: 10, ProductAmount: 1, ProductPrice $1.99}
     ];
 
+    // alles hieronder moet nog aangepast worden naar de shoppingcart pagina!
+
     // Function to fetch and display all products on the shopping_cart page
     function showAllProducts() {
 
