--- a/Products_folder/product-details.html
+++ b/Products_folder/product-details.html
@@ -121,15 +121,15 @@
        window.onload = () => {
            showProductDetails();
           
-           // Attach the addToCart function to the "Add to Cart" button click event
-           document.getElementById('addToShoppingcartButton').addEventListener('click', addToShoppingcart);
+    //        // Attach the addToCart function to the "Add to Cart" button click event
+    //        document.getElementById('addToShoppingcartButton').addEventListener('click', addToShoppingcart);
        };
 
     </script>
  
 
-    <!-- add product to order button -->
-    <button id="addToShoppingcartButton">Add to Shoppingcart</button>
+    <!-- add product to order button
+    <button id="addToShoppingcartButton">Add to Shoppingcart</button> -->
  
  
  </body>
