--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
     <script>
-        window.location.href = 'Login_folder/Login_screen.php';
+        window.location.href = 'user_homepage.php';
     </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="Login_folder/Login_screen.php" click here </a>.</p>
+    <p>If you are not redirected, <a href="user_homepage.php" click here </a>.</p>
 </body>
 </html>
