--- a/Products_folder/product-details.html
+++ b/Products_folder/product-details.html
@@ -89,7 +89,7 @@
                 .then(response => response.json())
                 .then(data => {
                     // Update the HTML content with the product details
-                    document.getElementById('product-container').innerHTML = `
+                    document.getElementById('product-container')[0].innerHTML = `
                     <div class="left-column">
                         <img src="${data.ProductImage}" alt="Product Picture">
                     </div>
@@ -103,34 +103,14 @@
                 .catch(error => console.error('Error:', error));
         }
 
-        // function to add the order to the shoppingcart 
-    //     function addToShoppingcart() {
-    //        const urlParams = new URLSearchParams(window.location.search);
-    //        const productId = urlParams.get('id');
-
-
-    //     //    // Use fetch to add the product ID to the database through orders.php
-    //     //    fetch(`orders.php?productId=${productId}`, { method: 'POST' })
-    //     //        .then(response => response.text())
-    //     //        .then(result => console.log(result))
-    //     //        .catch(error => console.error('Error:', error));
-    //    }
-
-
        // Call the function when the page loads
        window.onload = () => {
            showProductDetails();
           
-    //        // Attach the addToCart function to the "Add to Cart" button click event
-    //        document.getElementById('addToShoppingcartButton').addEventListener('click', addToShoppingcart);
+
        };
 
     </script>
- 
-
-    <!-- add product to order button
-    <button id="addToShoppingcartButton">Add to Shoppingcart</button> -->
- 
- 
+  
  </body>
  </html>
