Modified product page

--- a/Products_folder/product-details.html
+++ b/Products_folder/product-details.html
@@ -11,6 +11,9 @@
     <!-- Navigatie bar -->
     <script src="../FAQ/Navbar.js" defer></script>
 
+    <!-- Link voor icoontjes footer-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
         .product-container {
             display: flex;
