--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -1,171 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products Page</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Products Page</title>
 
-    <!-- Link naar de CSS sheet -->
-    <link rel="stylesheet" href="/Homepage_stylesheet.css">
+        <!-- Link naar de CSS sheet -->
+        <link rel="stylesheet" href="/Homepage_stylesheet.css">
 
-    <!-- Navigatie bar -->
-    <script src="../FAQ/Navbar.js" defer></script>
+        <!-- Navigatie bar -->
+        <script src="../FAQ/Navbar.js" defer></script>
 
-    <style>
-        /* Simple styling for the product grid */
-        .product-grid {
-            display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            gap: 10px;
-            justify-content: center;
-        }
+        <!-- Link voor icoontjes footer-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        .product {
-            border: 2px solid #000000;
-            border-radius: 25px;
-            padding: 20px;
-            align-items: center;
-            text-align: center;
-            cursor: pointer;
-            background-color: #7163c9;
-            transition: transform 0.3s ease;
-        }
+        <style>
+            /* Simple styling for the product grid */
+            .product-grid {
+                display: grid;
+                grid-template-columns: repeat(5, 1fr);
+                gap: 10px;
+                justify-content: center;
+            }
 
-        .product:hover {
-            transform: scale(1.2);
-        }
+            .product {
+                border: 2px solid #C4AE8C;
+                border-radius: 25px;
+                padding: 20px;
+                align-items: center;
+                text-align: center;
+                cursor: pointer;
+                background-color: #dbcdb6ad;
+                transition: transform 0.3s ease;
+            }
 
-        .product img {
-            max-width: 100%;
-            max-height: 50%;
-            margin-bottom: 10px;
-        }
+            .product:hover {
+                transform: scale(1.2);
+            }
 
-        .product h3 {
-            font-size: 150%;
-            margin-top: 10px; 
-            color:#000000;
-        }
+            .product img {
+                max-width: 100%;
+                max-height: 50%;
+                margin-bottom: 10px;
+            }
 
-        .product p {
-            margin-top: 5px;
-            color:#000000;
-        }
-    </style>
-</head>
+            .product h3 {
+                font-size: 150%;
+                margin-top: 10px; 
+                color:#000000;
+            }
 
-<body>
-    <h1>These are our products!</h1>
-        <div class="product-grid" id="product-grid">
-            <!-- Products will be displayed here dynamically trough the javascrypt -->
-        </div>
+            .product p {
+                margin-top: 5px;
+                color:#000000;
+            }
+        </style>
+    </head>
 
-    <script>
-        // Test array of product data
-        // const products = [
-        //     { ProductName: 'Yoghurt', ProductPrice: 19.99, ProductImage: '/Products_folder/Image_folder/Blueberry_Yogurt_Drink.jpg', ProductID: 1},
-        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
-        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
-        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
-        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
-        //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2}
-        // ];
+    <body>
+        <h1>These are our products!</h1>
+            <div class="product-grid" id="product-grid">
+                <!-- Products will be displayed here dynamically trough the javascrypt -->
+            </div>
 
-        // Function to fetch and display all products on the main page
-        function showAllProducts() {
+        <script>
+            // Test array of product data
+            // const products = [
+            //     { ProductName: 'Yoghurt', ProductPrice: 19.99, ProductImage: '/Products_folder/Image_folder/Blueberry_Yogurt_Drink.jpg', ProductID: 1},
+            //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
+            //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
+            //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
+            //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2},
+            //     { ProductName: 'Chocolate Pudding', ProductPrice: 10.99, ProductImage: '/Products_folder/Image_folder/Chocolate_Pudding.jpg', ProductID: 2}
+            // ];
 
-            // Use fetch API to get all product details from the server
-            fetch('get_all_products.php') 
-                .then(response => response.json())
-                .then(data => {
+            // Function to fetch and display all products on the main page
+            function showAllProducts() {
 
-                    // Update the product grid with the fetched product details
-                    const productGrid = document.getElementById('product-grid');
-                    productGrid.innerHTML = '';
+                // Use fetch API to get all product details from the server
+                fetch('get_all_products.php') 
+                    .then(response => response.json())
+                    .then(data => {
 
-                    data.forEach(product => {
-                        // Create a figure with class product
-                        const productFigure = document.createElement('figure');
-                        productFigure.className = 'product';
-                        productFigure.setAttribute('data-productid', product.ProductID);
+                        // Update the product grid with the fetched product details
+                        const productGrid = document.getElementById('product-grid');
+                        productGrid.innerHTML = '';
 
-                        // Create the image for the grid
-                        const imageElement = document.createElement('img');
-                        imageElement.src = product.ProductImage;
-                        imageElement.alt = `${product.ProductName} Image`;
+                        data.forEach(product => {
+                            // Create a figure with class product
+                            const productFigure = document.createElement('figure');
+                            productFigure.className = 'product';
+                            productFigure.setAttribute('data-productid', product.ProductID);
 
-                        // Create the caption for the figure
-                        const figCaption = document.createElement('figcaption');
+                            // Create the image for the grid
+                            const imageElement = document.createElement('img');
+                            imageElement.src = product.ProductImage;
+                            imageElement.alt = `${product.ProductName} Image`;
 
-                        // Create the product name for the grid
-                        const headingElement = document.createElement('h3');
-                        headingElement.textContent = product.ProductName;
+                            // Create the caption for the figure
+                            const figCaption = document.createElement('figcaption');
 
-                        // Create the product price for the grid
-                        const priceElement = document.createElement('p');
-                        priceElement.textContent = `Price: $${product.ProductPrice}`;
+                            // Create the product name for the grid
+                            const headingElement = document.createElement('h3');
+                            headingElement.textContent = product.ProductName;
 
-                        // Add all the elements to the figure and figure to the grid
-                        figCaption.appendChild(headingElement);
-                        figCaption.appendChild(priceElement);
+                            // Create the product price for the grid
+                            const priceElement = document.createElement('p');
+                            priceElement.textContent = `Price: $${product.ProductPrice}`;
 
-                        productFigure.appendChild(imageElement);
-                        productFigure.appendChild(figCaption);
+                            // Add all the elements to the figure and figure to the grid
+                            figCaption.appendChild(headingElement);
+                            figCaption.appendChild(priceElement);
 
-                        productGrid.appendChild(productFigure);
+                            productFigure.appendChild(imageElement);
+                            productFigure.appendChild(figCaption);
 
-                        // Add an event listener to each product figure
-                        productFigure.addEventListener('click', function () {
-                            const productId = this.getAttribute('data-productid');
-                            // Redirect to the product details page with the product ID
-                            window.location.href = `product-details.html?id=${productId}`;
+                            productGrid.appendChild(productFigure);
+
+                            // Add an event listener to each product figure
+                            productFigure.addEventListener('click', function () {
+                                const productId = this.getAttribute('data-productid');
+                                // Redirect to the product details page with the product ID
+                                window.location.href = `product-details.html?id=${productId}`;
+                            });
                         });
-                    });
-                })
-                .catch(error => console.error('Error:', error));
-        }
-        // Call the function when the page loads
-        window.onload = showAllProducts;
-    </script>
+                    })
+                    .catch(error => console.error('Error:', error));
+            }
+            // Call the function when the page loads
+            window.onload = showAllProducts;
+        </script>
 
-    <!-- Footer -->
-    <div class="footer"> 
-        <div class="row">
-        <div class="column">
-            <h3>About us</h3>
-            <p> At Fit 'n Flavors, we believe that nutrition forms the foundation for an energetic and balanced life. 
-                Our company has emerged from a shared passion for health, fitness, and delicious eating.
-                <br> 
-                <br> 
-                At Fit 'n Flavors, we strive to deliver high-quality, protein-rich products that are not only nutritious but also delightfully tasty. 
-                We understand that each individual has unique goals and taste preferences, which is why we have developed a wide range of products to meet all your needs.
-                <br> <br>
-                We aim to inspire you to bring out the best in yourself, both in the gym and beyond. Whether you're a seasoned athlete or just starting your fitness journey, Fit 'n Flavors is here to support you every step of the way.
-                Thank you for being a part of the Fit 'n Flavors family. Together, we are building a flavorful and healthy future!
-                </p>
-        </div>
-        <div class="column">
-            <br> <br>
-            <h3>Follow us!</h3>
-            <p><a href="http://www.instagram.com/" ><i class="fa fa-instagram" style="font-size:24px"></i></a>
-                <a href="https://www.facebook.com" ><i class="fa fa-facebook" style="font-size:24px"></i></a>
-                <a href="https://www.linkedin.com" ><i class="fa fa-linkedin" style="font-size:24px"></i></a>
+        <!-- Footer -->
+        <div class="footer"> 
+            <div class="row">
+            <div class="column">
+                <h3 class="footer">About Fit 'n Flavors</h3>
+                <p class="footer"> <a href="../About_us_folder/About_us.html">About us</a></p>
+                <p class="footer"> <a href="../About_us_folder/Terms_and_conditions.html">Terms & Conditions</a></p>
+            </div>
+
+            <div class="column">
+                <h3 class="footer">Costumerservice</h3>
+                <p class="footer"><a href="../FAQ/FAQ.html">FAQ</a></p>
+                <p class="footer"><a href="../FAQ/Delivery.html">Delivery information</a></p>
+                <p class="footer"><a href="../FAQ/Returns.html">Returns and refund policy</a></p>
+                <p class="footer"><a href="../FAQ/Contact.html">Contact</a></p>
+            </div>
             
-            </p>
-            <br> <br>
-            <h3>Costumerservice</h3>
-            <p class="links">
-                <a href="FAQ/FAQ.html">FAQ</a>
-                <br>
-                <a href="Delivery.html">Delivery information</a>
-                <br>
-                <a href="Returns.html">Returns and refund policy</a>
-                <br>
-                <a href="contact.html">Contact</a>
-            </p>
+            <div class="column">
+                <h3 class="footer">Follow us!</h3>
+                <p class="footer"><a class="footer" href="http://www.instagram.com/" ><i class="fa fa-instagram" style="font-size:24px"></i></a>
+                    <a class="footer" href="https://www.facebook.com" ><i class="fa fa-facebook" style="font-size:24px"></i></a>
+                    <a class="footer" href="https://www.linkedin.com" ><i class="fa fa-linkedin" style="font-size:24px"></i></a>
+                </p>
+            </div>
+            </div>
         </div>
-        </div>
-    
-    </div>
-</body>
+    </body>
 </html>
