--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -128,7 +128,7 @@
                     .catch(error => console.error('Error:', error));
             }
             // Call the function when the page loads
-            window.onload = showAllProducts;
+            window.onload = showAllProducts();
         </script>
 
         <!-- Footer -->
