debugging product details again

--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -121,7 +121,7 @@
                             productFigure.addEventListener('click', function () {
                                 const productId = this.getAttribute('data-productid');
                                 // Redirect to the product details page with the product ID
-                                window.location.href = `product-details.html?id=${productId}`;
+                                window.location.href = `product-details.php?id=${productId}`;
                             });
                         });
                     })
